Task instance Java/149